# yggdrasil-cli

./: .gitignore  BLACK.md  Cargo.toml  README.md  WHITE.md
src/: args.rs  diff.rs  formatter.rs  formatter_diff.rs  main.rs  scanner.rs  types.rs
src/diff/: block_hash.rs  crossfile.rs  engine.rs  expand.rs  inline.rs  matcher.rs  mod.rs  structural.rs
src/formatters/: cli.rs  markdown.rs  mod.rs  traits.rs
src/formatters/diff/: cli.rs  markdown.rs  mod.rs
src/formatters/output/: cli.rs  markdown.rs  mod.rs
src/scanner/: collect.rs  counter.rs  filters.rs  mod.rs  patterns.rs  stdin.rs
src/snapshot/: filelist.rs  format_selection.rs  mod.rs  run.rs  split.rs  writer.rs
src/sniff/: mod.rs  python.rs  resolve.rs
src/utils/: mod.rs
tests/: cli.rs
tests/fixtures/: expected_show.txt
