[package]
name = "yggdrasil-cli"
version = "0.1.4"
edition = "2021"
description = "The god-tree of your codebase — flatten projects into an AI-ready codex."
license = "MIT"
repository = "https://github.com/andrewrgarcia/yggdrasil-cli"
readme = "README.md"
keywords = ["cli", "documentation", "ai", "code", "codex"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
colored = "2.1"
glob = "0.3"
atty = "0.2"
similar = "2.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "ygg"
path = "src/main.rs"
