[package]
name = "yggdrasil-cli"
version = "0.2.4"
edition = "2021"

description = "Yggdrasil is a project flattener and diff engine that turns any subset of your codebase into a single AI-ready codex (index + contents), or compares snapshots with annotated diffs."

license = "MIT"
repository = "https://github.com/andrewrgarcia/yggdrasil-cli"
homepage = "https://github.com/andrewrgarcia/yggdrasil-cli"
documentation = "https://github.com/andrewrgarcia/yggdrasil-cli"
readme = "README.md"

keywords = [
    "cli",
    "diff",
    "documentation",
    "snapshot",
    "markdown"
]

categories = [
    "command-line-utilities",
    "development-tools",
    "text-processing"
]

authors = ["Andrew R. Garcia"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
colored = "2.1"
glob = "0.3"
atty = "0.2"
similar = "2.4"
blake3 = "1.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "ygg"
path = "src/main.rs"
